# volsu-voting-app

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: Cargo.toml  package.json
apps/backend/src/: app_state.rs  lib.rs  main.rs  types.rs  utils.rs
apps/backend/src/repository/: mod.rs  user_repository.rs  voting_repository.rs
apps/backend/src/routers/: mod.rs
apps/backend/src/routers/api/: mod.rs
apps/backend/src/routers/api/v1/: auth.rs  mod.rs  users.rs  votings.rs
apps/backend/src/routers/api/v1/auth/: mod.rs  router.rs  utils.rs
apps/backend/src/routers/api/v1/auth/handlers/: login_user.rs
apps/backend/src/routers/api/v1/middleware/: auth_only.rs  mod.rs
apps/backend/src/routers/api/v1/users/: router.rs
apps/backend/src/routers/api/v1/users/handlers/: get_user_by_id.rs  get_users_list.rs  me.rs  mod.rs  register_user.rs  update_user.rs
apps/backend/src/routers/api/v1/votings/: router.rs
apps/backend/src/routers/api/v1/votings/handlers/: create_voting.rs  get_voting_by_id.rs  get_votings_list.rs  mod.rs  user_vote.rs
apps/frontend/: package.json
apps/tui-frontend/: Cargo.toml  package.json
apps/yew-frontend/: Cargo.toml  README.md  index.html  index.scss  package.json
apps/yew-frontend/src/: app.rs  client.rs  lib.rs  types.rs  utils.rs
apps/yew-frontend/src/components/: mod.rs  voting_card.rs  votings_grid.rs
apps/yew-frontend/src/components/forms/: create_voting_form.rs  credentials_form.rs  mod.rs
apps/yew-frontend/src/layout/: header.rs
apps/yew-frontend/src/pages/: create_voting.rs  index.rs  login.rs  mod.rs  not_found.rs  profile.rs  register.rs  voting.rs  votings.rs
apps/yew-frontend/src/providers/: client_provider.rs  mod.rs  user_provider.rs
apps/yew-frontend/src/router/: main_route.rs  main_switch.rs  mod.rs
apps/yew-frontend/src/state/: app_state.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  prelude.rs  user.rs  user_vote.rs  voting.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250504_112439_voting_tables.rs
crates/types/: Cargo.toml
crates/types/src/: api_response.rs  dto.rs  lib.rs
crates/types/src/dto/: mod.rs  models.rs  request.rs  response.rs
