[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.140"

migration = { path = "../../crates/migration" }
entity = { path = "../../crates/entity" }
uuid = { version = "1.16.0", features = ["v4"] }
bcrypt = "0.17.0"

[dev-dependencies]
cargo-watch = "8.5.3"
